# sd2dinit

./: .gitlab-ci.yml  Cargo.toml  README.md  install.sh  vm-setup.ps1
docs/superpowers/plans/: 2026-03-26-sd2dinit-implementation.md
docs/superpowers/specs/: 2026-03-26-sd2dinit-design.md
hooks/: sd2dinit.hook
src/: config.rs  converter.rs  error.rs  generator.rs  hook.rs  lib.rs  main.rs  model.rs  parser.rs
tests/: converter_tests.rs  generator_tests.rs  integration_tests.rs  parser_tests.rs
