[package]
name = "sd2dinit"
version = "0.1.0"
edition = "2024"
description = "Convert systemd .service unit files to dinit service files"
authors = ["Hadi Cherkaoui"]
license = "GPL-3.0-or-later"
repository = "https://gitlab.cherkaoui.ch/HadiCherkaoui/sd2dinit"
keywords = ["dinit", "systemd", "init", "artix", "converter"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.0"
